--- a/index.html
+++ b/index.html
@@ -4,13 +4,6 @@
     <title>Alibaba</title>
   </head>
   <body>
-    <script text="text/javascript">
-      let PASSWORD = 'Vung oi mo ra';
-      let input;
-      do {
-        input = prompt('Nhap cau than chu');
-      } while (input !== PASSWORD);    
-      alert('Mo cua thanh cong!');
-    </script>
+    <script src="hi.js"></script>
   </body>
 </html>
